# agentvault

./: .env.example  .gitignore  Anchor.toml  README.md  SUBMISSION.md  deployer.json  package.json
app/frontend/: next.config.ts  package-lock.json  package.json  vercel.json
app/frontend/.claude/: launch.json
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/app/components/: ActivityFeed.tsx  AddMember.tsx  ConnectButton.tsx  CreateTeam.tsx  DemoDashboard.tsx  FundVault.tsx  MemberList.tsx  PaymentFlow.tsx  TeamDashboard.tsx  WalletProvider.tsx
app/frontend/lib/: anchor.ts  connectors.ts  constants.ts  creatorpay.json  mock-data.ts  program.ts
programs/creatorpay/: Cargo.toml
programs/creatorpay/src/: lib.rs
tests/: creatorpay.ts
