[package]
name = "creatorpay"
version = "0.1.0"
description = "CreatorPay — Stablecoin payroll for creator businesses on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "creatorpay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
